2011-08-30  Ryosuke Niwa  <rniwa@webkit.org>

        Get rid of toInputElement()
        https://bugs.webkit.org/show_bug.cgi?id=67175

        Reviewed by Darin Adler.

        * src/WebInputElement.cpp:
        (WebKit::toWebInputElement):

2011-08-30  Nat Duca  <nduca@chromium.org>

        Unreviewed, fix WebGL layout tests due to missing WebView pointer.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DPrivate::createGraphicsContextFromWebContext):

2011-08-30  Aaron Colwell  <acolwell@chromium.org>

        Add MediaSource API to HTMLMediaElement
        https://bugs.webkit.org/show_bug.cgi?id=64731

        Reviewed by Eric Carlson.

        * public/WebMediaPlayer.h:
        (WebKit::WebMediaPlayer::sourceAppend):
        (WebKit::WebMediaPlayer::sourceEndOfStream):
        * public/WebMediaPlayerClient.h:
        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::sourceOpened):
        (WebKit::WebMediaPlayerClientImpl::sourceURL):
        (WebKit::WebMediaPlayerClientImpl::sourceAppend):
        (WebKit::WebMediaPlayerClientImpl::sourceEndOfStream):
        * src/WebMediaPlayerClientImpl.h:

2011-08-30  Nat Duca  <nduca@chromium.org>

        [chromium] Allow GraphicsContexts to be created from MockWebGraphicsContexts
        https://bugs.webkit.org/show_bug.cgi?id=67179

        Reviewed by Kenneth Russell.

        * WebKit.gypi:
        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::GraphicsContext3DInternal):
        (WebCore::GraphicsContext3DInternal::create):
        (WebCore::GraphicsContext3DInternal::createFromWebContext):
        (WebCore::GraphicsContext3D::create):
        * src/GraphicsContext3DInternal.h:
        * tests/MockGraphicsContext3DTest.cpp: Renamed from Source/WebKit/chromium/tests/MockWebGraphicsContext3DTest.cpp.
        (FrameCountingContext::FrameCountingContext):
        (FrameCountingContext::prepareTexture):