@@ -654,7 +654,7 @@ void EditorClientImpl::textFieldDidBeginEditing(Element* element)
 
 void EditorClientImpl::textFieldDidEndEditing(Element* element)
 {
-    HTMLInputElement* inputElement = toHTMLInputElement(element);
+    HTMLInputElement* inputElement = WebCore::toHTMLInputElement(element);
     if (m_webView->autofillClient() && inputElement)
         m_webView->autofillClient()->textFieldDidEndEditing(WebInputElement(inputElement));
 
@@ -676,7 +676,7 @@ void EditorClientImpl::textDidChangeInTextField(Element* element)
 bool EditorClientImpl::doTextFieldCommandFromEvent(Element* element,
                                                    KeyboardEvent* event)
 {
-    HTMLInputElement* inputElement = toHTMLInputElement(element);
+    HTMLInputElement* inputElement = WebCore::toHTMLInputElement(element);
     if (m_webView->autofillClient() && inputElement) {
         m_webView->autofillClient()->textFieldDidReceiveKeyDown(WebInputElement(inputElement),
                                                                 WebKeyboardEventBuilder(*event));
