@@ -1,5 +1,15 @@
 2011-08-30  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Chromium build fix after r94142.
+
+        * src/EditorClientImpl.cpp:
+        (WebKit::EditorClientImpl::textFieldDidEndEditing):
+        (WebKit::EditorClientImpl::doTextFieldCommandFromEvent):
+        * src/WebPasswordFormUtils.cpp:
+        (WebKit::findPasswordFormFields):
+
+2011-08-30  Ryosuke Niwa  <rniwa@webkit.org>
+
         Get rid of toInputElement()
         https://bugs.webkit.org/show_bug.cgi?id=67175
 
